--- a/src/style.css
+++ b/src/style.css
@@ -150,12 +150,12 @@
 }
 
 .all {
-    padding: 20px 15em;
+    padding: 20px 10em;
     flex-wrap: nowrap;
     display: flex;
     width: 100%;
     font-size: 1.2em;
-    justify-content: space-around;
+    justify-content: center;
     flex-direction: row;
 }
 
